# curlman

./: .gitignore  Cargo.toml  README.md
src/: curl.rs  cursor_movements.rs  custom_widgets.rs  editor.rs  error.rs  executor.rs  main.rs  new_parser.rs  parser.rs  types.rs
