[package]
name = "curlman"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
curl = { version = "0.4.47" , default-features = false}
gapbuf = "0.1.4"
http = "1.1.0"
jq-rs = "0.4.1"
nom = "7.1.3"
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
url = "2.5.2"

[features]
default = ["dynamic"]
static = ["curl/static-ssl", "curl/static-curl", "jq-rs/bundled"]
dynamic = ["curl/ssl"]



